# 01-generics

./: README.md
minmax/: CMakeLists.txt  main.cpp  main.hpp
minmax/test/: tests.cpp
sort/: CMakeLists.txt  main.cpp  point.hpp
sort/test/: tests.hpp
