cmake_minimum_required(VERSION 3.5)
project(sorting)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(RVALUES "Enable advanced version with rvalue references" OFF)
if(RVALUES)
    message("advanced version with rvalues: enabled")
    add_definitions(-DRVALUES)
else()
    message("advanced version with rvalues: disabled")
endif()
add_library(tests test/tests.cpp)
target_include_directories(tests PUBLIC test/ ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(app main.cpp)
target_link_libraries(app tests)
